Update: posts/TIL-2025-05-28.md
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -7,6 +7,8 @@ id: 2537346
 date: '2025-05-28T13:05:36Z'
 ---
 
+Installation packages/ Host Level operations on a K8S node with privileged container.
+
 ## Annotations
 
 Set an annotation named `command` and use [yaml anchor][yaml-reference-card] `&cmd` to use it later.
