Update: posts/TIL-2025-05-28.md
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -7,7 +7,7 @@ id: 2537346
 date: '2025-05-28T13:05:36Z'
 ---
 
-Installation packages/ Host Level operations on a K8S node with privileged container.
+Host Level operations on a K8S node with privileged container.
 
 ## Annotations
 
@@ -62,7 +62,7 @@ spec:
     type: RollingUpdate
 ```
 
-## Install a package on K8S Node
+## Host Level Operation on K8S Node within a container
 
 Was wondering how a container can install a package or do host level commands!?
 
@@ -87,12 +87,19 @@ spec:
 ### `command` breakdown
 
 - [`nsenter`][nsenter]
+
   > `nsenter` is a Linux utility used to enter different namespaces of other processes — like the network, mount, PID, UTS, etc. This is useful when you want to operate inside another process's context (like the host) from within a container.
+
 - `--mount=/proc/1/ns/mnt`
+
   > enter the mount namespace of process 1 (usually the host system’s init process inside the node).
+
   - `/proc/1/ns/mnt`
+
     > special file that represents the mount namespace of PID 1 (host).
+
 - `-- bash -c *cmd`
+
   > Separator; everything after the `--` is passed to the new shell.
   > new shell runs the cmd, which is defined in the annotation of Daemonset, and as described in the [K8S Annotaion][kubernetes-annotations] document, the container can access to `command` annotation.
 
