Update: posts/TIL-2025-05-28.md
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -92,12 +92,8 @@ spec:
 
 - `--mount=/proc/1/ns/mnt`
 
-  > enter the mount namespace of process 1 (usually the host system’s init process inside the node).
-
-  - `/proc/1/ns/mnt`
-
-    > special file that represents the mount namespace of PID 1 (host).
-
+  > enter the mount namespace of process 1 (usually the host system’s init process inside the node).</br>
+  > `/proc/1/ns/mnt` special file that represents the mount namespace of PID 1 (host).
 
 - `-- bash -c *cmd`
 
