Add: namespaces and lsns resources to TIL-2025-05-28.md
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -160,8 +160,14 @@ For the host(node) level operations, the `nsenter` needs privileges
 
 - [Kubernetes Annotations][kubernetes-annotations]
 - [longhorn-nfs-installation][longhorn-nfs-installation]
+- [container vs pods][ctr-vs-pod]
+- [Namespaces][namespaces]
+- [lsns][ls-ns]
 
 [longhorn-nfs-installation]: https://raw.githubusercontent.com/longhorn/longhorn/v1.9.0/deploy/prerequisite/longhorn-nfs-installation.yaml
 [kubernetes-annotations]: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
 [nsenter]: https://man7.org/linux/man-pages/man1/nsenter.1.html
 [yaml-reference-card]: https://yaml.org/refcard.html
+[ctr-vs-pod]: https://labs.iximiuz.com/tutorials/containers-vs-pods/
+[namespaces]: https://man7.org/linux/man-pages/man7/namespaces.7.html
+[ls-ns]: https://man7.org/linux/man-pages/man8/lsns.8.html
