Add: additional notes in posts/TIL-2025-05-28.md
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -156,6 +156,30 @@ For the host(node) level operations, the `nsenter` needs privileges
   Run container in privileged mode. Processes in privileged containers are essentially equivalent to root on the host.
   ```
 
+## Additional notes from ChatGPT
+
+🧠 What Happens When You Use It?
+
+With `nsenter --mount=/proc/1/ns/mnt`,You are telling your container
+
+> "Hey, stop using your own isolated mount namespace. Enter the host's mount namespace." </br>
+> This lets your process (inside a container) perform filesystem operations as if it were on the host.
+
+For example:
+
+```bash
+nsenter --mount=/proc/1/ns/mnt -- bash -c 'mount -t nfs ...'
+
+```
+
+🔒 Permissions Required
+
+To access `/proc/1/ns/mnt`:
+
+- You must have `CAP_SYS_ADMIN`.
+- In Kubernetes, that typically means the container must be run as `privileged: true`.
+- You also need `hostPID: true` to ensure `PID 1` is the host `PID 1`, not the container's own init.
+
 ## Resources
 
 - [Kubernetes Annotations][kubernetes-annotations]
@@ -163,6 +187,7 @@ For the host(node) level operations, the `nsenter` needs privileges
 - [container vs pods][ctr-vs-pod]
 - [Namespaces][namespaces]
 - [lsns][ls-ns]
+- [proc][proc]
 
 [longhorn-nfs-installation]: https://raw.githubusercontent.com/longhorn/longhorn/v1.9.0/deploy/prerequisite/longhorn-nfs-installation.yaml
 [kubernetes-annotations]: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
@@ -171,3 +196,4 @@ For the host(node) level operations, the `nsenter` needs privileges
 [ctr-vs-pod]: https://labs.iximiuz.com/tutorials/containers-vs-pods/
 [namespaces]: https://man7.org/linux/man-pages/man7/namespaces.7.html
 [ls-ns]: https://man7.org/linux/man-pages/man8/lsns.8.html
+[proc]: https://man7.org/linux/man-pages/man5/proc.5.html#
