--- a/posts/TIL-2025-05-28.md
+++ b/posts/TIL-2025-05-28.md
@@ -21,7 +21,10 @@ Set an annotation named `command` and use [yaml anchor][yaml-reference-card] `&c
 > You can use either labels or annotations to attach metadata to Kubernetes objects. Labels can be used to select objects and to find collections of objects that satisfy certain conditions. In contrast, annotations are not used to identify and select objects. The metadata in an annotation can be small or large, structured or unstructured, and can include characters not permitted by labels. It is possible to use labels as well as annotations in the metadata of the same object.
 
 **But** wait, the `&cmd` yaml anchor does nothing to do with the annotation, so im waiting for the discussion.
-[command Annotation discussion][command-Annotation-discussion]
+
+[[QUESTION] command Annotation in Installation Requirements manifests ?][command-Annotation-discussion]
+
+**[Update]**: [Discussion Answer][discussion-answer]
 
 [Longhorn NFS Installation][longhorn-nfs-installation]
 
@@ -201,3 +204,4 @@ To access `/proc/1/ns/mnt`:
 [ls-ns]: https://man7.org/linux/man-pages/man8/lsns.8.html
 [proc]: https://man7.org/linux/man-pages/man5/proc.5.html#
 [command-Annotation-discussion]: https://github.com/longhorn/longhorn/discussions/11008
+[discussion-answer]:https://github.com/longhorn/longhorn/discussions/11008#discussioncomment-13321110
